force-app/main/default/objects/MA_Saved_Configuration__c/MA_Saved_Configuration__c.object-meta.xml
<CustomObject>
    <label>Engagement Link</label>
    <pluralLabel>Engagement Links</pluralLabel>
    <sharingModel>Private</sharingModel>
    <nameField>
        <type>AutoNumber</type>
        <label>Config Number</label>
        <displayFormat>SC-{0000}</displayFormat>
    </nameField>
</CustomObject>