force-app/main/default/objects/MA_Saved_Configuration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <description>Found-or-created automatically from the Company field when this link is saved -- see MaSavedConfigurationController.resolveAccount. A rep never has to look this up by hand.</description>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement Links</relationshipLabel>
    <relationshipName>Engagement_Links</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>