force-app/main/default/objects/MA_Saved_Configuration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <description>Found-or-created automatically from the client-contact name/email entered in Customize when this link is saved -- see GtmSavedConfigurationController.resolveContact.</description>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Links</relationshipLabel>
    <relationshipName>Engagement_Links</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>