force-app/main/default/objects/MA_Saved_Configuration__c/fields/Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value__c</fullName>
    <label>Estimated Value</label>
    <description>Rep-entered deal-size estimate for this engagement. Used as the Amount when an assessment submission auto-creates an Opportunity, if set -- otherwise the Offering's default target (MA_Offering__mdt) is used instead.</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>