force-app/main/default/objects/MA_Saved_Configuration__c/fields/Generated_URL__c.field-meta.xml
<CustomField>
    <fullName>Generated_URL__c</fullName>
    <label>Generated URL</label>
    <description>The shareable, guest-accessible configurator link generated by the Customize panel.</description>
    <type>Url</type>
    <required>true</required>
</CustomField>