force-app/main/default/objects/MA_Saved_Configuration__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <description>Industry key from the configurator (e.g. fintech, medtech). Blank means generic/no industry.</description>
    <type>Text</type>
    <length>50</length>
</CustomField>