force-app/main/default/objects/MA_Saved_Configuration__c/fields/Industry_Label__c.field-meta.xml
<CustomField>
    <fullName>Industry_Label__c</fullName>
    <label>Industry</label>
    <description>Human-readable industry name derived from the Industry__c key.</description>
    <formula>IF(Industry__c = 'fintech', 'Financial Services',
IF(Industry__c = 'medtech', 'MedTech',
IF(Industry__c = 'lifesci', 'Life Sciences',
IF(Industry__c = 'media', 'Media &amp; Entertainment',
IF(Industry__c = 'transport', 'Transportation &amp; Logistics',
IF(Industry__c = 'government', 'Government &amp; Public Sector',
IF(ISBLANK(Industry__c), '', Industry__c)))))))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>