force-app/main/default/objects/MA_Saved_Configuration__c/fields/Presentation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Stage__c</fullName>
    <description>BD/Sales workflow stage for this client link. Drives what the client and rep see on the shared URL.</description>
    <label>Presentation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Assessment</fullName><label>Assessment</label><default>false</default></value>
            <value><fullName>In_Review</fullName><label>In Review</label><default>false</default></value>
            <value><fullName>Draft</fullName><label>Draft</label><default>false</default></value>
            <value><fullName>Sent</fullName><label>Sent</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>