force-app/main/default/objects/MA_Saved_Configuration__c/listViews/All_Client_Links.listView-meta.xml
<ListView>
    <fullName>All_Client_Links</fullName>
    <filterScope>Everything</filterScope>
    <label>All Client Links</label>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Offering__c</columns>
    <columns>Industry__c</columns>
    <columns>Active__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
</ListView>