force-app/main/default/objects/MA_Saved_Configuration__c/listViews/My_Client_Links.listView-meta.xml
<ListView>
    <fullName>My_Client_Links</fullName>
    <filterScope>Mine</filterScope>
    <label>My Client Links</label>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Offering__c</columns>
    <columns>Industry__c</columns>
    <columns>Active__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>